handling schema changes for arrays

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "serve.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "babel-node": "babel-node serve.js --presets es2015,stage-2",
+    "start": "nodemon --exec npm run babel-node"
   },
   "repository": {
     "type": "git",
@@ -17,11 +19,21 @@
   },
   "homepage": "https://github.com/ragsurya/graphql#readme",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
     "graphql": "^0.12.3",
+    "json-db": "0.0.2",
+    "lowdb": "^1.0.0",
     "node-fetch": "^1.7.3",
     "util.promisify": "^1.0.0",
     "xml2js": "^0.4.19"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.11"
   }
 }
