--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "babel-node": "babel-node serve.js --presets es2015,stage-2",
-    "start": "nodemon --exec npm run babel-node"
+    "start": "nodemon --exec npm run babel-node",
+    "json:server" : "json-server --watch db.json"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/ragsurya/graphql#readme",
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-preset-es2015": "^6.24.1",
@@ -28,6 +30,8 @@
     "express-graphql": "^0.6.11",
     "graphql": "^0.12.3",
     "json-db": "0.0.2",
+    "json-server": "^0.12.1",
+    "lodash": "^4.17.4",
     "lowdb": "^1.0.0",
     "node-fetch": "^1.7.3",
     "util.promisify": "^1.0.0",
